fix: app doesn't fit in window size

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,6 +23,8 @@
 	grid-template-columns: 1fr 300px;
 	grid-template-rows: 1fr 300px;
 	gap: 0.5rem;
+	min-width: 0;
+	min-height: 0;
 
 	justify-items: stretch;
 	align-items: stretch;
